// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HEADER TEXT Renders with DefaultProps 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={1}
  style={
    Object {
      "color": "#000000",
      "fontSize": 35,
      "fontWeight": "bold",
      "paddingBottom": 25,
      "paddingLeft": 25,
      "paddingRight": 25,
    }
  }
>
  Big Header
</Text>
`;

exports[`HEADER TEXT Renders with color prop (red) 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={1}
  style={
    Object {
      "color": "red",
      "fontSize": 35,
      "fontWeight": "bold",
      "paddingBottom": 25,
      "paddingLeft": 25,
      "paddingRight": 25,
    }
  }
>
  Red Header
</Text>
`;
